tests/lime/fail/tokens/label_rest/byte_42.wsa
jmp .l* .l*: push 42
